; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_common.c_Field_CompletePlayerNameFinal.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_common.c_Field_CompletePlayerNameFinal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i32* }

@matchCount = common dso_local global i32 0, align 4
@qtrue = common dso_local global i64 0, align 8
@completionField = common dso_local global %struct.TYPE_2__* null, align 8
@completionString = common dso_local global i32* null, align 8
@shortestMatch = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c" \00", align 1
@qfalse = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @Field_CompletePlayerNameFinal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @Field_CompletePlayerNameFinal(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %5 = load i32, i32* @matchCount, align 4
  %6 = icmp eq i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i64, i64* @qtrue, align 8
  store i64 %8, i64* %2, align 8
  br label %55

9:                                                ; preds = %1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completionField, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  %13 = call i8* @strlen(i32* %12)
  %14 = load i32*, i32** @completionString, align 8
  %15 = call i8* @strlen(i32* %14)
  %16 = ptrtoint i8* %13 to i64
  %17 = ptrtoint i8* %15 to i64
  %18 = sub i64 %16, %17
  %19 = trunc i64 %18 to i32
  store i32 %19, i32* %4, align 4
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completionField, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  %23 = load i32, i32* %4, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %22, i64 %24
  %26 = load i32, i32* @shortestMatch, align 4
  %27 = load i32, i32* %4, align 4
  %28 = sext i32 %27 to i64
  %29 = sub i64 8, %28
  %30 = trunc i64 %29 to i32
  %31 = call i32 @Q_strncpyz(i32* %25, i32 %26, i32 %30)
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completionField, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 1
  %34 = load i32*, i32** %33, align 8
  %35 = call i8* @strlen(i32* %34)
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completionField, align 8
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  store i8* %35, i8** %37, align 8
  %38 = load i32, i32* @matchCount, align 4
  %39 = icmp eq i32 %38, 1
  br i1 %39, label %40, label %53

40:                                               ; preds = %9
  %41 = load i64, i64* %3, align 8
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %53

43:                                               ; preds = %40
  %44 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completionField, align 8
  %45 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %44, i32 0, i32 1
  %46 = load i32*, i32** %45, align 8
  %47 = call i32 @Q_strcat(i32* %46, i32 8, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %48 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completionField, align 8
  %49 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %48, i32 0, i32 0
  %50 = load i8*, i8** %49, align 8
  %51 = getelementptr inbounds i8, i8* %50, i32 1
  store i8* %51, i8** %49, align 8
  %52 = load i64, i64* @qtrue, align 8
  store i64 %52, i64* %2, align 8
  br label %55

53:                                               ; preds = %40, %9
  %54 = load i64, i64* @qfalse, align 8
  store i64 %54, i64* %2, align 8
  br label %55

55:                                               ; preds = %53, %43, %7
  %56 = load i64, i64* %2, align 8
  ret i64 %56
}

declare dso_local i8* @strlen(i32*) #1

declare dso_local i32 @Q_strncpyz(i32*, i32, i32) #1

declare dso_local i32 @Q_strcat(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
